@@ -494,7 +494,7 @@
     <string name="PreferencesActivity.BookmarksDatabaseTitle">Bookmarks storage</string>
     <string name="PreferencesActivity.BookmarksDatabaseSummary">Choose the bookmarks storage mode.</string>
     
-    <string name="PreferencesActivity.BookmarksDatabaseStock">Android</string>
+    <string name="PreferencesActivity.BookmarksDatabaseStock">Android bookmarks</string>
     <string name="PreferencesActivity.BookmarksDatabaseInternal">Internal</string>
         
     <string-array name="BookmarksDatabaseEntries">
@@ -508,5 +508,11 @@
 	
     <string name="HistoryListActivity.BookmarkAdded">Added to bookmarks.</string>
     <string name="HistoryListActivity.BookmarkRemoved">Removed from bookmarks.</string>
+    
+    <string name="HttpAuthenticationDialog.DialogTitle">Sign in to %1$s - %2$s</string>
+    <string name="HttpAuthenticationDialog.UserName">Name</string>
+    <string name="HttpAuthenticationDialog.Password">Password</string>
+    
+    <string name="Commons.Proceed">Proceed</string>    
     
 </resources>
